<resources>
    <string name="app_name">Blue Square Speedometer</string>
    <string name="app_source_code_url" translatable="false">https://github.com/nhirokinet/bluesquarespeedometer</string>

    <string name="permission_location_no">No Location Permission Granted</string>
    <string name="permission_location_coarse">Only Coarse Location Granted</string>
    <string name="permission_location_fine">Fine Location Granted</string>
    <string name="permission_location_grant_prompt">Grant location permission</string>
    <string name="permission_location_description">This app is speedometer based on device location service, so fine location permission is necessary.</string>

    <string name="error_soft_location_not_enabled">Location system is not enabled now.</string>
    <string name="error_soft_location_provider_not_enabled">Location provider \"%1$s\" is not enabled now.</string>

    <string name="menu_this_app_digital_speedometer_fullscreen">Digital Speedometer (fullscreen)</string>
    <string name="menu_this_app_licensing_information">License information</string>
    <string name="main_button_fullscreen">Fullscreen</string>
    <string name="main_button_overlay_short">Overlay</string>
    <string name="main_button_screen_on_short">Screen on</string>
    <string name="settings_title">Settings</string>
    <string name="menu_this_app_overlay_show">Show mini overlay</string>
    <string name="menu_this_app_overlay_hide">Hide mini overlay</string>

    <string name="metrics_speed">Speed</string>
    <string name="metrics_altitude">Altitude</string>
    <string name="metrics_msl_altitude">MSL Altitude</string>
    <string name="metrics_wgs84_altitude">WGS84 Altitude</string>
    <string name="metrics_accuracy">Accuracy</string>
    <string name="metrics_msl_altitude_accuracy">MSL Altitude Accuracy</string>
    <string name="metrics_info_time">Info Time</string>
    <string name="metrics_barometric_pressure">Barometric pressure</string>
    <string name="metrics_pressure_altitude_qne">Pressure altitude (QNE)</string>
    <string name="metrics_pressure_sea_level">Sea-level pressure</string>
    <string name="metrics_altitude_short">ALT</string>

    <string name="unit_km_per_hour">km/h</string>
    <string name="unit_knot">kn</string>
    <string name="unit_mile_per_hour">mph</string>
    <string name="unit_meter">m</string>
    <string name="unit_meter_per_second">m/s</string>
    <string name="unit_feet">ft</string>
    <string name="unit_angle_deg">%1$d°%2$02d\'%3$02d.%4$01d\"</string>
    <string name="unit_hpa">hPa</string>
    <string name="unit_inhg">inHg</string>

    <string name="dialog_select_location_provider">Select location provider</string>
    <string name="dialog_select_speed_unit">Select speed unit</string>
    <string name="dialog_select_altitude_unit">Select altitude unit</string>
    <string name="dialog_select_air_pressure_unit">Select air pressure unit</string>

    <string name="config_location_provider">Location provider</string>
    <string name="config_speed_unit">Speed unit</string>
    <string name="config_altitude_unit">Altitude unit</string>
    <string name="config_air_pressure_unit">Air pressure unit</string>
    <string name="config_keep_screen_on">Keep screen on</string>
    <string name="option_on">On</string>
    <string name="option_state_format">%1$s: %2$s</string>
    <string name="option_off">Off</string>

    <string name="coordinate_display_north">N</string>
    <string name="coordinate_display_south">S</string>
    <string name="coordinate_display_east">E</string>
    <string name="coordinate_display_west">W</string>

    <string name="general_caption_unset">(Not set)</string>

    <string name="overlay_permission_description">The mini overlay shows your speed and altitude on top of other apps (e.g. a navigation app). Android requires the "Display over other apps" permission for this.</string>
    <string name="overlay_permission_grant_prompt">Grant "Display over other apps" permission</string>
    <string name="overlay_permission_denied">The overlay cannot be shown because the "Display over other apps" permission is not granted.</string>
    <string name="overlay_location_required_description">The mini overlay needs the location permission to show your speed and altitude.</string>
    <string name="overlay_notification_channel">Mini speedometer overlay</string>
    <string name="overlay_notification_title">Mini speedometer overlay</string>
    <string name="overlay_notification_text">Speed and altitude overlay is shown on top of other apps.</string>
    <string name="overlay_notification_action_stop">Stop</string>
    <string name="overlay_close_button">×</string>
    <string name="general_button_change">Change</string>
    <string name="general_button_retry">Retry</string>

    <string name="licensing_source_code_header">Source code</string>

    <!-- Licensing information, untranslatable not to make slightest difference -->
    <string name="licensing_notice_header" translatable="false">License information</string>
    <string name="licensing_notice_body" translatable="false">
        Blue Square Speedometer is licensed under the Apache License, Version 2.0.
        \n
        \nBlue Square Speedometer contains code from the following libraries, which the Apache License, Version 2.0, is applied to.
        \n
        \n- Android Jetpack
        \n- JetBrains Java Annotations
        \n- Kotlin Stdlib
        \n- Coroutines support libraries for Kotlin
        \n- kotlinx-coroutines-android
        \n- Google Guava
        \n- JSpecify
    </string>

    <!-- Legal English texts -->
    <string name="license_apache_license_v2.0_name" translatable="false">Apache License, Version 2.0</string>
</resources>
