<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="?backgroundColor"
    android:id="@+id/settings"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_location_provider"
                    />
                <TextView
                    android:id="@+id/settings_config_location_provider_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/settings_change_provider_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_speed_unit"
                    />
                <TextView
                    android:id="@+id/settings_config_speed_unit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/settings_speed_unit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_altitude_unit"
                    />
                <TextView
                    android:id="@+id/settings_config_altitude_unit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/settings_altitude_unit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <Button
            android:id="@+id/settings_licensing_information_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_this_app_licensing_information"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:text="@string/app_name"
            android:id="@+id/settings_version_info_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
    </LinearLayout>
</ScrollView>
