<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?backgroundColor"
    android:id="@+id/main"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <LinearLayout
            android:id="@+id/main_activity_permission_location_not_granted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="3sp"
            android:background="?alertBackgroundColor"
            >
            <TextView
                android:text="@string/permission_location_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?baseTextColor"
                />
            <Button
                android:id="@+id/main_activity_grant_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_location_grant_prompt"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_activity_location_not_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="3sp"
            android:background="?alertBackgroundColor"
            >
            <TextView
                android:id="@+id/main_activity_location_not_enabled_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?baseTextColor"
                />
            <Button
                android:id="@+id/main_activity_refresh_location_provider_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_button_retry"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_speed"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >
            <TextView
                android:id="@+id/main_activity_speed_digits_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="?baseTextColor"
                android:fontFamily="monospace"
                android:paddingEnd="30sp"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/main_activity_speed_unit_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:id="@+id/main_activity_altitude_caption_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_altitude"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >
            <TextView
                android:id="@+id/main_activity_altitude_digits_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:fontFamily="monospace"
                android:textColor="?baseTextColor"
                android:paddingEnd="30sp"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/main_activity_altitude_unit_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:id="@+id/main_activity_current_coordinate_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?baseTextColor"
            android:fontFamily="monospace"
            />
        <TextView
            android:id="@+id/main_activity_geolocation_detail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?baseTextColor"
            android:fontFamily="monospace"
            />
        <TextView
            android:id="@+id/main_activity_permission_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?baseTextColor"
            android:fontFamily="monospace"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/main_activity_meter_car1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:text="@string/main_button_fullscreen"
                />
            <Button
                android:id="@+id/main_activity_overlay_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/menu_this_app_overlay_show"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/main_activity_keep_screen_on_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:text="@string/config_keep_screen_on"
                />
            <Button
                android:id="@+id/main_activity_settings_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/settings_title"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>